# ihatepyc

./: LICENSE  README.md  build.sh  setup.cfg
src/ihatepyc/: __init__.py  cli.py  pycisbad.py
