

[metadata]
name = ihatepyc
version = 0.1.0
author = Combo Gang
author_email = contact@combogang.com
description = We all hate the __pycache__ folders, so lets delete them
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ihatepyc = ihatepyc.cli:main
